Update link social media personal

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Call me 𝓑𝓲𝓷𝓱</title>
+    <title>Call me Quang</title>
     <link rel="stylesheet" type="text/css" href="./FontAwesome/fontawesome-free-5.15.1-web/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="./image/logo.png" />
@@ -15,7 +15,7 @@
 <body>
     <!-- HEADER -->
     <div class="header">
-        <div class="header__logo"><a href="./index.html">Nguyen Ngoc Thanh <strong>Binh</strong></a></div>
+        <div class="header__logo"><a href="./index.html">Tran Nguyen <strong>Quang</strong></a></div>
         <nav>
             <ul class="header__navLinks">
                 <li class="header__navLinks---link"><a class="link" href="./works.html">Works</a></li>
@@ -139,27 +139,24 @@
             </ul>
         </div>
     </div>
-    <!-- FOOTER -->
-    <div class="footer">
-        <div class="contact">
-            <span>My mail contact</span>
-            <a class="contacts" href="mailto:binhnnt.98@gmail.com">binhnnt.98@gmail.com</a>
+        <!-- FOOTER -->
+        <div class="footer">
+            <div class="contact">
+                <span>My mail contact</span>
+                <a class="contacts" href="mailto:quangnguyencr971@gmail.com">quangnguyencr971@gmail.com</a>
+            </div>
+            <div class="tel">
+                <span>My phone number</span>
+                <a class="contacts" href="tel:0938 097 512 ">+84 38 097 512</a>
+            </div>
+            <div class="social">
+                <a class="social-icon facebook" href="https://www.facebook.com/profile.php?id=100011391501281"><i class="fab fa-facebook-f"></i></a>
+                <a class="social-icon skype" href="#"><i class="fab fa-skype"></i></a>
+                <a class="social-icon twiter" href="#"><i class="fab fa-twitter"></i></a>
+                <a class="social-icon instagram" href="https://github.com/nguyenquangcr"><i class="fab fa-github"></i></a>
+                <a class="social-icon linkedin" href="https://www.linkedin.com/in/nguy%C3%AAn-quang-tr%E1%BA%A7n-092217253/"><i class="fab fa-linkedin-in"></i></a>
+            </div>
         </div>
-        <div class="tel">
-            <span>My phone number</span>
-            <a class="contacts" href="tel:039 766 56 60">+84 39 766 56 60</a>
-        </div>
-        <div class="social">
-            <a class="social-icon facebook" href="https://www.facebook.com/thanhbinh2501"><i
-                    class="fab fa-facebook-f"></i></a>
-            <a class="social-icon skype" href="#"><i class="fab fa-skype"></i></a>
-            <a class="social-icon twiter" href="#"><i class="fab fa-twitter"></i></a>
-            <a class="social-icon instagram" href="https://www.instagram.com/thanhbinh98_/?hl=vi"><i
-                    class="fab fa-instagram"></i></a>
-            <a class="social-icon linkedin" href="https://www.linkedin.com/in/binh-nguyen-7295b1225"><i
-                    class="fab fa-linkedin-in"></i></a>
-        </div>
-    </div>
     <!-- NAVBAR-MOBILE -->
     <div class="navbarMobile">
         <span class="img-mask lt lt-active"></span>
