--- a/index.html
+++ b/index.html
@@ -362,11 +362,11 @@
             <a class="contacts" href="tel:0938 097 512 ">+84 38 097 512</a>
         </div>
         <div class="social">
-            <a class="social-icon facebook" href="https://www.facebook.com/thanhbinh2501"><i class="fab fa-facebook-f"></i></a>
+            <a class="social-icon facebook" href="https://www.facebook.com/profile.php?id=100011391501281"><i class="fab fa-facebook-f"></i></a>
             <a class="social-icon skype" href="#"><i class="fab fa-skype"></i></a>
             <a class="social-icon twiter" href="#"><i class="fab fa-twitter"></i></a>
-            <a class="social-icon instagram" href="https://www.instagram.com/thanhbinh98_/?hl=vi"><i class="fab fa-instagram"></i></a>
-            <a class="social-icon linkedin" href="https://www.linkedin.com/in/binh-nguyen-7295b1225"><i class="fab fa-linkedin-in"></i></a>
+            <a class="social-icon instagram" href="https://github.com/nguyenquangcr"><i class="fab fa-github"></i></a>
+            <a class="social-icon linkedin" href="https://www.linkedin.com/in/nguy%C3%AAn-quang-tr%E1%BA%A7n-092217253/"><i class="fab fa-linkedin-in"></i></a>
         </div>
     </div>
     <!-- NAVBAR-MOBILE -->
