--- a/project3.html
+++ b/project3.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Call me 𝓑𝓲𝓷𝓱</title>
+    <title>Call me Quang</title>
     <link rel="stylesheet" type="text/css" href="./FontAwesome/fontawesome-free-5.15.1-web/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;600;800&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/jpg" href="./image/logo.png"/>
