--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
     <div class="container-About">
         <div class="container-About--wrapper">
             <div class="About---wrapperTitle">
-                <p class="about-name">My name is <span>Nguyen Ngoc Thanh Binh</span> <span class="hand-shake">👋</span>
+            <p class="about-name">My name is <span>Tran Nguyen Quang</span> <span class="hand-shake">👋</span>
                 </p>
                 <p>And I am a Front-end Developer in Vietnam interested in designing a website with a comprehensive
                     design
@@ -63,21 +63,21 @@
                     <span class="title">Work Experience</span>
                     <ul>
                         <li>
-                            June 2021 - Present </br>
-                            <span class="position">Freelance Front-End Developer</span> </br>
-                            At: KA Group
+                            March 2023 - Present </br>
+                            <span class="position">Fullstack Developer</span> </br>
+                            At: FPT Telecom
                             </br>
                         </li>
                         <li>
-                            July 2021 - October 2021 </br>
-                            <span class="position">Internship Front-End Developer</span> </br>
-                            At: JAMstack Vietnam Cop.
+                            March 2021 - March 2022 </br>
+                            <span class="position">Junior Front-End Developer</span> </br>
+                            At: Alta Media.
                             </br>
                         </li>
                         <li>
-                            August 2019 - September 2020 </br>
-                            <span class="position">Factory Technician</span> </br>
-                            At: Orient Pharmaceutical Cop.
+                            October 2020 - February 2021 </br>
+                            <span class="position">Internship - Fresher Front-End Developer</span> </br>
+                            At: ANTS Company.
                             </br>
                         </li>
                     </ul>
@@ -90,16 +90,9 @@
                 <h3>Education</h3>
                 <div class="timelineStudy">
                     <ul>
-                        <li class="date" date-date="2020-Present">
-                            <p class="title">Bach Khoa University</p>
-                            <p>Control Engineering and Automation</br>
-                                - The Degree of Engineer (part-time)
-                            </p>
-                        </li>
-                        <li class="date" date-date="2016-2019">
-                            <p class="title">Cao Thang Technical College</p>
-                            <p>Control Engineering and Automation</br>
-                                - College Degree
+                        <li class="date" date-date="2016-2021">
+                            <p class="title">HO CHI MINH UNIVERSITY OF TECHNICAL AND EDUCATION</p>
+                            <p>Software Engineer</br>
                             </p>
                         </li>
                     </ul>
@@ -108,10 +101,11 @@
                     <h3>Skills</h3>
                     <p>HTML5/CSS3</p>
                     <p>Javascript</p>
-                    <p>VueJS/NuxtJS</p>
-                    <p>ReactJS</p>
-                    <p>C/C++</p>
-                    <p>PLC LAD/LD</p>
+                    <p>ReactJS/NextJS</p>
+                    <p>NodeJS/NesJS</p>
+                    <p>Material UI/ANTD</p>
+                    <p>Tailwindcss</p>
+                    <p>Vite/Webpack</p>
                 </div>
             </div>
         </div>
@@ -119,21 +113,21 @@
             <span class="title">Work Experience</span>
             <ul>
                 <li>
-                    October 2021 - Present </br>
-                    <span class="position">Freelance Front-End Developer</span> </br>
-                    At: KA Group
+                    March 2023 - Present </br>
+                    <span class="position">Fullstack Developer</span> </br>
+                    At: FPT Telecom
                     </br>
                 </li>
                 <li>
-                    July 2021 - October 2021 </br>
-                    <span class="position">Internship Front-End Developer</span> </br>
-                    At: JAMstack Vietnam Cop.
+                    March 2021 - March 2022 </br>
+                    <span class="position">Junior Front-End Developer</span> </br>
+                    At: Alta Media.
                     </br>
                 </li>
                 <li>
-                    August 2019 - September 2020 </br>
-                    <span class="position">Factory Technician</span> </br>
-                    At: Orient Pharmaceutical Cop.
+                    October 2020 - February 2021 </br>
+                    <span class="position">Internship - Fresher Front-End Developer</span> </br>
+                    At: ANTS Company.
                     </br>
                 </li>
             </ul>
@@ -147,7 +141,7 @@
             </div>
             <div class="tel">
                 <span>My phone number</span>
-                <a class="contacts" href="tel:0938 097 512 ">+84 38 097 512</a>
+                <a class="contacts" href="tel:0938 097 512 ">+84 938 097 512</a>
             </div>
             <div class="social">
                 <a class="social-icon facebook" href="https://www.facebook.com/profile.php?id=100011391501281"><i class="fab fa-facebook-f"></i></a>
