--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="tel">
                     <span>My phone number</span>
-                    <a class="contacts" href="tel:039 766 56 60">+84 39 766 56 60</a>
+                    <a class="contacts" href="tel:093 809 75 12">+84 938 097 512</a>
                 </div>
                 <div class="social">
                     <a class="social-icon facebook" href="https://www.facebook.com/profile.php?id=100011391501281"><i
@@ -111,7 +111,7 @@
         </div>
         <div class="tel">
             <span>My phone number</span>
-            <a class="contacts" href="tel:0938 097 512 ">+84 38 097 512</a>
+            <a class="contacts" href="tel:0938 097 512 ">+84 938 097 512</a>
         </div>
         <div class="social">
             <a class="social-icon facebook" href="https://www.facebook.com/profile.php?id=100011391501281"><i class="fab fa-facebook-f"></i></a>
