--- a/project3.html
+++ b/project3.html
@@ -15,7 +15,7 @@
 <body>
     <!-- HEADER -->
     <div class="header">
-        <div class="header__logo"><a href="./index.html">Nguyen Ngoc Thanh <strong>Binh</strong></a></div>
+        <div class="header__logo"><a href="./index.html">Tran Nguyen <strong>Quang</strong></a></div>
         <div class="backtoWorkBtn">
             <a href="./works.html">Back <i class="fas fa-arrow-right"></i></a>
         </div>
@@ -42,11 +42,11 @@
                 <div class="alltext">
                     <div class="textItem">
                         <span>Front-End</span>
-                        <p>Binh Nguyen</p>
+                        <p>Quang Tran</p>
                     </div>
                     <div class="textItem">
                         <span>Back-End</span>
-                        <p>Binh Nguyen</p>
+                        <p>Quang Tran</p>
                     </div>
                     <div class="textItem">
                         <span>Year</span>
