--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                 <div class="timelineStudy">
                     <ul>
                         <li class="date" date-date="2016-2021">
-                            <p class="title">HCM UNIVERSITY OF TECHNICAL AND EDUCATION</p>
+                            <p class="title">Sư Phạm Kỹ Thuật University</p>
                             <p>Software Engineer</br>
                             </p>
                         </li>
