--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
     <!-- MAIN -->
     <div class="AllTitle">
         <div class="homepage-title--mainTitle">
-            <span class="mainTitle">Living Young,
+            <span class="mainTitle">Slaping the keyboard,
                 <span class="line2"></span>
             </span>
             <span class="line1"></span>
         </div>
         <div class="homepage-title--contentTitle">
-            <p>Wild and Free.</p>
+            <p>Until somthing good happens.</p>
         </div>
     </div>
     <div class="container-About">
